# audio-mcp

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
app/: concurrency.py  config.py  logging_setup.py  main.py  mcp_server.py  progress.py  queue.py  stats.py  version.py
app/audio/: __init__.py  chunk.py  compress.py
app/backends/: __init__.py
app/http/: downloads.py  health.py  landing.py  upload.py
app/preprocessing/: __init__.py  rules.py
app/resolver/: __init__.py  base64_inline.py  http_url.py  types.py  upload_ref.py  youtube.py
app/storage/: files.py  jobs_db.py
app/tools/: _async_runner.py  _eta.py  _schemas.py  generate_audio.py  get_job.py  list_recent_jobs.py  list_voices.py  resources.py  transcribe.py  usage_guide.py
docs/: usage.md
scripts/: app-version.sh  cleanup_uploads.py  download_piper_voice.sh  version.py
tests/: conftest.py
tests/integration/: test_generate_audio_tool.py  test_get_job_tool.py  test_http_downloads.py  test_http_health.py  test_http_upload.py  test_list_recent_jobs_tool.py  test_list_voices_tool.py  test_mcp_trailing_slash.py  test_restart_sweep.py  test_transcribe_tool.py
tests/mcp/: test_mcp_initialize.py
tests/unit/: test_async_runner.py  test_audio_chunk.py  test_audio_compress.py  test_backend_faster_whisper.py  test_backend_gcloud.py  test_backend_gemini.py  test_backend_groq.py  test_backend_openai.py  test_backend_piper.py  test_concurrency.py  test_config.py  test_groq_fallback.py  test_preprocessing_dictionary.py  test_preprocessing_rules.py  test_progress.py  test_queue.py  test_resolver_base64_inline.py  test_resolver_http_url.py  test_resolver_upload_ref.py  test_resolver_youtube.py  test_stats.py  (+2 more)
(+15 files in other folders)
