[project]
name = "audio-mcp"
version = "0.1.0"
description = "Remote MCP server for audio transcription and text-to-speech"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "fastmcp>=3.2.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.12",
    "python-magic>=0.4.27",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "apscheduler>=3.10.4",
    "yt-dlp>=2024.11.0",
    "youtube-transcript-api>=0.6.3",
    "groq>=0.11.0",
    "openai>=1.54.0",
    "google-cloud-texttospeech>=2.21.0",
    "faster-whisper>=1.0.3",
    "piper-tts>=1.2.0",
]

[project.optional-dependencies]
metrics = ["prometheus-client>=0.21.0"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-json-report>=1.5.0",
    "respx>=0.21.1",
    "ruff>=0.8.0",
    "mcp>=1.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RET", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that exercise real local backends (piper, faster-whisper tiny)",
    "mcp: MCP-client smoke tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
]
